# SurfelMapping

./: CMakeLists.txt  LICENSE  README.md  build_map.cpp  load_map.cpp  move_data.py  test_main.cpp
SPADE/: postprocess.py  test.py  train.py
SPADE/data/: base_dataset.py  kitti_dataset.py  single_dataset.py
SPADE/models/: pix2pix_model.py
SPADE/models/networks/: architecture.py  discriminator.py  generator.py  normalization.py
SPADE/options/: base_options.py  train_options.py
SPADE/trainers/: pix2pix_trainer.py
SPADE/util/: random_erasing.py
gui/: DatasetReader.cpp  DatasetReader.h  GUI.cpp  GUI.h  KittiReader.cpp  KittiReader.h
src/: ComputePack.cpp  ComputePack.h  Config.cpp  Config.h  FeedbackBuffer.cpp  FeedbackBuffer.h  FillIn.cpp  FillIn.h  GPUTexture.cpp  GPUTexture.h  GlobalModel.cpp  GlobalModel.h  IndexMap.cpp  IndexMap.h  Resize.cpp  Resize.h  Shaders.h  SurfelMapping.cpp  SurfelMapping.h  Uniform.h
src/Shaders/: back_map.geom  back_map.vert  color.glsl  conflict.geom  conflict.vert  data.geom  data.vert  debug.frag  debug_quad.geom  depth_bilateral.frag  depth_diffuse.frag  depth_filter.frag  depth_metric.frag  depth_movings.frag  depth_norm.frag  depth_norm_float.frag  depth_smooth.frag  draw_feedback.vert  draw_global_surface.geom  draw_global_surface.vert  draw_image.frag  draw_image.geom  draw_image.vert  draw_image_adaptive.geom  draw_surface.frag  draw_surface.vert  draw_surface_adaptive.geom  fuse.frag  fuse.vert  geometry.glsl  index_map.vert  init_unstable.vert  map.frag  map.vert  resize.frag  show_semantic.frag  surfel_feedback.vert  surfels.glsl  unstable.geom  unstable.vert  (+3 more)
src/Utils/: Checker.cpp  Checker.h  Stopwatch.h  system.h
